@@ -1,3 +1,11 @@
+2009-01-22 Richard Dale <richard.j.dale@gmail.com>
+* There was an exception in the virtual method callback code to ignore any
+load() methods as they clashed with the Ruby Kernel#load method. However,
+Kernel#load is a module method, and a respond_to? test on a Wt::Ruby instance 
+won't ever be true. So remove the load() special casing. This makes the code
+for DeferredWidgets in the wt-homepage and widgetgallery examples work 
+correctly.
+
 2009-01-20 Richard Dale <richard.j.dale@gmail.com>
 * Skip methods called 'impl' in the Smoke library generation
 * Add a marshaller for std::vector<Wt::WString>
